--- a/.github/workflows/pici.yml
+++ b/.github/workflows/pici.yml
@@ -16,10 +16,10 @@ jobs:
         - name: run tests
           run: make test
 
-#        - name: publish code coverage
-#          uses: paambaati/codeclimate-action@v2.7.4
-#          env:
-#            CC_TEST_REPORTER_ID: ${{ secrets.COVERAGE_ID }}
-#          with:
-#            coverageCommand: make test-coverage
-#            debug: true
+        - name: test & publish code coverage
+          uses: paambaati/codeclimate-action@v3.0.0
+          env:
+            CC_TEST_REPORTER_ID: ${{ secrets.COVERAGE_ID }}
+          with:
+            coverageCommand: make test-coverage
+            debug: true
