--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ packages = [
 python = "^3.10"
 pytest = "^7.1.3"
 pytest-cov = "^3.0.0"
+PyYAML = "^6.0"
 
 [tool.poetry.scripts]
 gendiff = "gendiff.scripts.main:main"
