--- a/.github/workflows/pici.yml
+++ b/.github/workflows/pici.yml
@@ -20,5 +20,5 @@ jobs:
           env:
             CC_TEST_REPORTER_ID: ${{ secrets.COVERAGE_ID }}
           with:
-            coverageCommand: make test-coverage-xml
+            coverageCommand: make test-coverage
             debug: true
